name:                apkstore
version:             0.1.0.0
author:              Christian Klinger
maintainer:          io@klinch.de
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Controllers 
  build-depends:       base >= 4.7 && < 5
                     , text
                     , scotty
                     , http-types
                     , text
                     , directory
                     , bytestring
                     , cryptohash
                     , wai-extra
                     , base16-bytestring
                     , filepath
                     , aeson
  default-language:    Haskell2010

executable apkstore-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , apkstore
                     , wai
                     , wai-extra
                     , http-types
                     , scotty
                     , cmdargs 
                     , filepath
                     , directory
                     , data-default
  default-language:    Haskell2010
